Linux utility for listing USB C Power Delivery information.

Changelog for pre-release lsucpd-0.90 [20230828] [svn: r10]
  - build framework by copying lsscsi repository
  - doc/usb_pd_pdo_rdo.pdf added for PDO and RDO tables
